[gd_scene load_steps=9 format=3 uid="uid://drmqi1my2og81"]

[ext_resource type="Script" uid="uid://dhr5n32nbwyxl" path="res://content/packs/basic_addition/level_programs/grid_counting_f.gd" id="1_84bvw"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="2_3ntle"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="3_kbbgm"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="4_fsfud"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="5_gkx77"]
[ext_resource type="Script" uid="uid://d3y6yqdxcis57" path="res://content/packs/basic_addition/fields/grid_counting/programs/soft_count.gd" id="6_7ph6t"]
[ext_resource type="PackedScene" uid="uid://cuus6hqo1ds0n" path="res://content/packs/basic_addition/fields/grid_counting/programs/sum_pieces.tscn" id="7_d3msm"]
[ext_resource type="PackedScene" uid="uid://53cp00ja4q61" path="res://content/packs/basic_addition/fields/grid_counting/programs/count_pieces.tscn" id="8_4sw3a"]

[node name="LevelProgram" type="Node"]
script = ExtResource("1_84bvw")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_3ntle")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="States" type="Node" parent="StateChart"]
script = ExtResource("3_kbbgm")
initial_state = NodePath("Playing")

[node name="Playing" type="Node" parent="StateChart/States"]
script = ExtResource("4_fsfud")

[node name="ToVerifying" type="Node" parent="StateChart/States/Playing"]
script = ExtResource("5_gkx77")
to = NodePath("../../Verifying")
event = &"verify"
delay_in_seconds = "start_verifying_delay"

[node name="Verifying" type="Node" parent="StateChart/States"]
script = ExtResource("3_kbbgm")
initial_state = NodePath("SumPieces")

[node name="SumPieces" type="Node" parent="StateChart/States/Verifying"]
script = ExtResource("4_fsfud")

[node name="ToCountPieces" type="Node" parent="StateChart/States/Verifying/SumPieces"]
script = ExtResource("5_gkx77")
to = NodePath("../../CountPieces")
event = &"succeed"
delay_in_seconds = "0.0"

[node name="CountPieces" type="Node" parent="StateChart/States/Verifying"]
script = ExtResource("4_fsfud")

[node name="ToCompleted" type="Node" parent="StateChart/States/Verifying/CountPieces"]
script = ExtResource("5_gkx77")
to = NodePath("../../../Completed")
event = &"succeed"
delay_in_seconds = "0.0"

[node name="ToPlaying" type="Node" parent="StateChart/States/Verifying"]
script = ExtResource("5_gkx77")
to = NodePath("../../Playing")
event = &"fail"
delay_in_seconds = "0.0"

[node name="Completed" type="Node" parent="StateChart/States"]
script = ExtResource("4_fsfud")

[node name="SoftCountProgram" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_7ph6t")

[node name="SumPiecesProgram" parent="." instance=ExtResource("7_d3msm")]

[node name="CountPiecesProgram" parent="." instance=ExtResource("8_4sw3a")]

[connection signal="state_entered" from="StateChart/States/Playing" to="." method="_on_playing_state_entered"]
[connection signal="state_exited" from="StateChart/States/Verifying" to="." method="_on_verifying_state_exited"]
[connection signal="state_entered" from="StateChart/States/Verifying/SumPieces" to="." method="_on_sum_pieces_state_entered"]
[connection signal="state_entered" from="StateChart/States/Verifying/CountPieces" to="." method="_on_count_pieces_state_entered"]
[connection signal="state_entered" from="StateChart/States/Completed" to="." method="_on_completed_state_entered"]
[connection signal="completed" from="SumPiecesProgram" to="." method="_on_sum_pieces_program_completed"]
[connection signal="completed" from="CountPiecesProgram" to="." method="_on_count_pieces_program_completed"]
